
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wow-510k-assistant"
version = "0.1.0"
description = "WOW 510(k) Assistant – Flask + PyWebView app with OpenAI and Gemini integration"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "Flask>=3.0,<4.0",
  "pywebview>=5.0",
  "openai>=1.40.0",
  "google-genai>=0.5.0",
  "PyMuPDF>=1.24.0",
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"
